# rsh

./: Cargo.toml  README.md
src/: main.rs  opsys.rs  rshexec.rs  rshio.rs  zshio.rs
